--- a/src/Weather.scss
+++ b/src/Weather.scss
@@ -1,16 +1,24 @@
 .Weather {
-  align-items: center;
+  align-self: center;
   border-radius: 5px;
-  border: 1px solid rgb(230, 230, 230);
   background: rgb(240, 240, 240);
   display: flex;
   flex-direction: column;
-  width: 400px;
+  justify-content: space-between;
+  min-width: 400px;
+  min-height: 500px;
 
+  &__icons {
+    display: flex;
+    align-self: center;
+    margin-top: 20px;
+  }
+  
   &__common {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: 20px;
 
     div {
       display: flex;
