--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,17 @@
+html,
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: 100%;
 }
-  img {
-    width: 160px;
-    height: 100%;
-  }
+
+body {
+  margin: 0;
+}
+
+#root {
+  height: 100%;
+}
+
+img {
+  width: 160px;
+  height: 100%;
+}
